@@ -3,4 +3,6 @@ Squad:
 * Paweł Nowak
 * Patryk Marszałek
 * Maciej Rut
-
+Wszyskie potrzebne pliki w src.
+Potrzebne ustawienia VM:
+--module-path [path to javaFX lib] --add-modules javafx.controls,javafx.fxml,javafx.media
